--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,9 +1,5 @@
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#driverClassName=com.mysql.jdbc.Driver
 #validationQuery=SELECT 1
-#url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
-#username=root
-#password=yang
 
 cpool.acquireIncrement=1
 cpool.checkoutTimeout=0
@@ -15,11 +11,15 @@ cpool.numHelperThreads=5
 cpool.maxStatements=100
 hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 hibernate.ehcache_config_file=/ehcache/ehcache-hibernate-local.xml
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@192.168.121.217:1521:POWERDES
-jdbc.username=powerdesk
-jdbc.password=testpd2015
 
+#jdbc.driver=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@192.168.121.217:1521:POWERDES
+#jdbc.username=powerdesk
+#jdbc.password=testpd2015
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+jdbc.username=root
+jdbc.password=root
 
 hibernate.hbm2ddl.auto=none
 hibernate.show_sql=true
