--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,15 +25,14 @@
     </servlet-mapping>
 
     <!-- log4j 配置 开始 -->
-
     <context-param>
         <param-name>log4jConfigLocation </param-name >
         <param-value>classpath:log4jspring.properties </param-value >
     </context-param>
-    <context-param>
+<!--    <context-param>
         <param-name>log4jRefreshInterval</param-name >
         <param-value>600000</param-value >
-    </context-param>
+    </context-param>-->
 
     <filter>
         <filter-name>hibernateFilter</filter-name>
