--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,21 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <!--webcollector-->
+    <dependency>
+      <groupId>cn.edu.hfut.dmic.webcollector</groupId>
+      <artifactId>WebCollector</artifactId>
+      <version>2.09</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>2.48.2</version>
+    </dependency>
+
+
+    <!---->
   </dependencies>
   <build>
     <finalName>mdesk</finalName>
