--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
     <junit.version>3.8.1</junit.version>
     <log4j.version>1.2.12</log4j.version>
     <hibernate.version>4.3.5.Final</hibernate.version>
+    <!-- mybatis版本号 -->
+    <mybatis.version>3.2.1</mybatis.version>
   </properties>
   <dependencies>
     <!-- spring核心包 -->
@@ -43,11 +45,11 @@
       <version>${spring.version}</version>
     </dependency>
     <!--hibernate-->
-    <dependency>
+    <!--<dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate.version}</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
@@ -110,11 +112,32 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.6.3</version>
     </dependency>
+    <!--单元测试依赖 -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+    <!--spring单元测试依赖 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!--mybatis依赖 -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>${mybatis.version}</version>
+    </dependency>
+
+    <!-- mybatis/spring包 -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.2.0</version>
     </dependency>
 
   </dependencies>
