--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -16,7 +16,8 @@ jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@192.168.121.217:1521:POWERDES
 jdbc.username=powerdesk
 jdbc.password=testpd2015
-#testpd2015jdbc.driver=com.mysql.jdbc.Driver
+#testpd2015
+#jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
 #jdbc.username=root
 #jdbc.password=root
