--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <hibernate.version>4.3.5.Final</hibernate.version>
     <!-- mybatis版本号 -->
     <mybatis.version>3.2.1</mybatis.version>
+    <quartz.version>2.2.2</quartz.version>
   </properties>
   <dependencies>
     <!-- spring核心包 -->
@@ -38,6 +39,11 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context-support</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
     <!-- springframe end -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -139,6 +145,11 @@
       <artifactId>mybatis-spring</artifactId>
       <version>1.2.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.quartz-scheduler</groupId>
+          <artifactId>quartz</artifactId>
+          <version>${quartz.version}</version>
+      </dependency>
 
   </dependencies>
   <build>
