--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mungo.mdesk</groupId>
-  <artifactId>mdesk</artifactId>
+  <artifactId>chaos</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>mdesk Maven Webapp</name>
+  <name>chaos Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <!--<repositories>
@@ -23,12 +23,12 @@
 
   <properties>
     <!-- spring版本号 -->
-    <spring.version>4.0.0.RELEASE</spring.version>
+    <spring.version>4.3.4.RELEASE</spring.version>
     <junit.version>3.8.1</junit.version>
     <log4j.version>1.2.12</log4j.version>
     <hibernate.version>4.3.5.Final</hibernate.version>
     <!-- mybatis版本号 -->
-    <mybatis.version>3.2.1</mybatis.version>
+    <mybatis.version>3.3.0</mybatis.version>
     <quartz.version>2.2.2</quartz.version>
   </properties>
   <dependencies>
@@ -153,7 +153,7 @@
 
   </dependencies>
   <build>
-    <finalName>mdesk</finalName>
+    <finalName>chaos</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -165,9 +165,9 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>tomcat-maven-plugin</artifactId>
-        <version>1.1</version>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
         <configuration>
           <port>9887</port>
         </configuration>
@@ -176,7 +176,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.1.1</version>
         <configuration>
-          <outputDirectory>E:/deploy/war</outputDirectory>
+          <outputDirectory>D:/deploy/war</outputDirectory>
           <warName>MDesk</warName>
         </configuration>
       </plugin>
