--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <!-- spring版本号 -->
     <spring.version>4.3.4.RELEASE</spring.version>
     <junit.version>3.8.1</junit.version>
-    <log4j.version>1.2.27</log4j.version>
+    <log4j.version>1.2.17</log4j.version>
     <hibernate.version>4.3.5.Final</hibernate.version>
     <!-- mybatis版本号 -->
     <mybatis.version>3.3.0</mybatis.version>
@@ -50,12 +50,7 @@
       <artifactId>spring-orm</artifactId>
       <version>${spring.version}</version>
     </dependency>
-    <!--hibernate-->
-    <!--<dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>${hibernate.version}</version>
-    </dependency>-->
+
     <dependency>
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
@@ -106,17 +101,17 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.6.3</version>
+      <version> 2.9.9</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.10.1</version>
+      <version> 2.9.9</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.6.3</version>
+      <version> 2.9.9</version>
     </dependency>
     <!--单元测试依赖 -->
     <dependency>
@@ -177,7 +172,7 @@
         <version>2.1.1</version>
         <configuration>
           <outputDirectory>D:/deploy/war</outputDirectory>
-          <warName>MDesk</warName>
+          <warName>chaos</warName>
         </configuration>
       </plugin>
     </plugins>
