--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -18,7 +18,7 @@ hibernate.ehcache_config_file=/ehcache/ehcache-hibernate-local.xml
 #jdbc.password=testpd2015
 #testpd2015
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:7306/demo?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
 
