--- a/pom.xml
+++ b/pom.xml
@@ -101,17 +101,17 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version> 2.9.9</version>
+      <version>[2.9.10.1,)</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version> 2.9.10.1</version>
+      <version>[2.9.10.1,)</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version> 2.9.9</version>
+      <version>[2.9.10.1,)</version>
     </dependency>
     <!--单元测试依赖 -->
     <dependency>
